fix image stretching on safari

--- a/roobell.css
+++ b/roobell.css
@@ -61,6 +61,7 @@ li {
 }
 
 .gallery-image {
+  height: auto;
   width: 100%;
   padding: 4px 0;
 }
